# pam-cli

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: config.rs  main.rs
src/api/: client.rs  mod.rs
src/commands/: chat.rs  context.rs  jira.rs  memory.rs  mod.rs  reflect.rs  skills.rs
